--- a/Design/HomePage/index.html
+++ b/Design/HomePage/index.html
@@ -8,7 +8,7 @@
     />
     <title>Home - Brand</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Montserrat:400,700"
     />
@@ -16,7 +16,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic"
     />
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css" />
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css" /> -->
   </head>
 
   <body id="page-top">
@@ -298,9 +298,9 @@
             </div>
         </div>
     </div> -->
-    <script src="assets/js/jquery.min.js"></script>
+    <!-- <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <script src="assets/js/freelancer.js"></script>
+    <script src="assets/js/freelancer.js"></script> -->
   </body>
 </html>
